# Illuvatar

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  tmp_environment.json
include/: MainWindow.h  magic_enum.hpp  superTypes.h  uniformRandom.h  unirand.h  wip.h
include/characters/: BadMinion.h  Character.h  Dragon.h  Eldar.h  Faction.h  GoodMinion.h  Master.h  Minion.h  Vala.h  Werewolf.h
include/core/: Environment.h  Game.h  MainWindow.h  Roll.h  main_window.h
include/enums/: AttackNature.h  Direction.h  DirectionUtils.h  Faction.h  Result.h  RollResult.h  ThingAtPoint.h
include/geometry/: Point.h  Rectangle.h
include/gui/: MainWindow.h  QGameMap.h  QGameSidebar.h  QGameWrapper.h
include/map/: DirectionUtils.h  Domain.h  Generators.h  Map.h  PathFinder.h  Point.h  QGameMap.h  Tile.h  TileSet.h  map.h
include/model/abstract/: Alliance.h  Character.h  Horde.h  Minion.h
include/model/playable/: Dragon.h  Eldar.h  Eldars.h  Master.h  Vala.h  Valars.h  Werewolf.h
include/players/: Alliance.h  Character.h  Dragon.h  Eldar.h  Horde.h  Master.h  Minion.h  Vala.h  Valar.h  Werewolf.h
include/qt/: QGameMap.h
include/templates/: Singleton.h
qt/: MainWindow.ui
schemes/: State transition.drawio  UML.drawio  includes.drawio
src/: MainWindow.cpp  main.cpp  unirand.cpp  wip.cpp
src/Model/Abstract/: Alliance.cpp  Character.cpp  Character.h  Horde.cpp  Minion.cpp  Minion.h
src/Model/Playable/: Dragon.cpp  Eldar.cpp  Eldars.cpp  Master.cpp  Vala.cpp  Valars.cpp  Werewolf.cpp  Werewolf.h
src/Tools/: DiceStats.h  Factions.h
src/characters/: BadMinion.cpp  Character.cpp  GoodMinion.cpp  Master.cpp  Minion.cpp
src/core/: Environment.cpp  Game.cpp  MainWindow.cpp  main.cpp  main_window.cpp
src/enums/: Direction.cpp  DirectionUtils.cpp  Faction.cpp  RollResult.cpp  ThingAtPoint.cpp
src/geometry/: Point.cpp  Rectangle.cpp
src/gui/: MainWindow.cpp  QGameMap.cpp  QGameSidebar.cpp  QGameWrapper.cpp
src/map/: DirectionUtils.cpp  Domain.cpp  Generators.cpp  Map.cpp  PathFinder.cpp  Point.cpp  QGameMap.cpp  Tile.cpp  TileSet.cpp  map.cpp
src/players/: Alliance.cpp  Character.cpp  Dragon.cpp  Eldar.cpp  Horde.cpp  Master.cpp  Minion.cpp  Vala.cpp  Valar.cpp  Werewolf.cpp
src/qt/: QGameMap.cpp
